# poly2mono

./: .gitignore  README.md  dictionary.json  main.py  poly2mono.py  pyproject.toml  scan_mono.py  test.py  test_poly2mono.py
src/poly2mono/: dictionary.json  gui.py  main.py  poly2mono.py
src/poly2mono/utils/: create_dictionary.py  monosyllables.py  remove_accents.py  remove_spirits.py
tests/: 00_mono.txt  00_poly.txt  01_mono.txt  02_mono.txt  02_poly.txt  03_mono.txt  05_mono.txt  05_poly.txt  06_mono.txt  06_poly.txt  07_mono.txt  08_mono.txt  08_poly.txt  09_mono.txt  09_poly.txt  test.txt  test_poly2mono.py
tests/fixtures/: 00_mono.txt  00_poly.txt  01_poly.txt  02_mono.txt  03_poly.txt  04_mono.txt  04_poly.txt  06_mono.txt  07_poly.txt  09_mono.txt  09_poly.txt
utils/: create_dictionary.py  monosyllables.py  remove_accents.py  remove_spirits.py
