[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "poly2mono"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "greek-accentuation>=1.2.0",
    "pytest>=8.2.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
poly2mono = ["*.json"]

[project.scripts]
p2m = "poly2mono.gui:main"
update = "poly2mono.utils.create_dictionary:create_dictionary"

# [tool.pytest.ini_options]
# addopts = [
#     '--doctest-modules',
#     '--pyargs',
# ]
# testpaths = [
#     "./tests",
#     "poly2mono",
# ]

[tool.ruff]
line-length = 100
output-format = "concise"

[tool.ruff.lint]
select = [
    "W",    # pycodestyle warning
    "I",    # isort
    "Q",    # quotes
    "PTH",  # Paths
    "F",
    "N",
]

